--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -7,7 +7,17 @@ author_profile: true
 
 {% include base_path %}
 
-<!-- New style rendering if publication categories are defined -->
+<!--{% if site.talkmap_link == true %}-->
+
+<!--<p style="text-decoration:underline;"><a href="/talkmap.html">See a map of all the places I've given a talk!</a></p>-->
+
+<!--{% endif %}-->
+
+<!--{% for post in site.talks reversed %}-->
+<!--  {% include archive-single-talk.html %}-->
+<!--{% endfor %}-->
+
+ New style rendering if publication categories are defined
 {% if site.publication_category %}
   {% for category in site.publication_category  %}
     {% assign title_shown = false %}
@@ -29,12 +39,4 @@ author_profile: true
 {% endif %}
 
 
-<!--{% if site.talkmap_link == true %}-->
 
-<!--<p style="text-decoration:underline;"><a href="/talkmap.html">See a map of all the places I've given a talk!</a></p>-->
-
-<!--{% endif %}-->
-
-<!--{% for post in site.talks reversed %}-->
-<!--  {% include archive-single-talk.html %}-->
-<!--{% endfor %}-->
