--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -7,36 +7,36 @@ author_profile: true
 
 {% include base_path %}
 
-<!--{% if site.talkmap_link == true %}-->
+{% if site.talkmap_link == true %}
 
-<!--<p style="text-decoration:underline;"><a href="/talkmap.html">See a map of all the places I've given a talk!</a></p>-->
+<p style="text-decoration:underline;"><a href="/talkmap.html">See a map of all the places I've given a talk!</a></p>
 
-<!--{% endif %}-->
-
-<!--{% for post in site.talks reversed %}-->
-<!--  {% include archive-single-talk.html %}-->
-<!--{% endfor %}-->
-
- New style rendering if publication categories are defined
-{% if site.publication_category %}
-  {% for category in site.publication_category  %}
-    {% assign title_shown = false %}
-    {% for post in site.talks reversed %}
-      {% if post.category != category[0] %}
-        {% continue %}
-      {% endif %}
-      {% unless title_shown %}
-        <h2>{{ category[1].title }}</h2><hr />
-        {% assign title_shown = true %}
-      {% endunless %}
-      {% include archive-single.html %}
-    {% endfor %}
-  {% endfor %}
-{% else %}
-  {% for post in site.talks reversed %}
-    {% include archive-single.html %}
-  {% endfor %}
 {% endif %}
+
+{% for post in site.talks reversed %}
+  {% include archive-single-talk.html %}
+{% endfor %}
+
+<!-- New style rendering if publication categories are defined-->
+<!--{% if site.publication_category %}-->
+<!--  {% for category in site.publication_category  %}-->
+<!--    {% assign title_shown = false %}-->
+<!--    {% for post in site.talks reversed %}-->
+<!--      {% if post.category != category[0] %}-->
+<!--        {% continue %}-->
+<!--      {% endif %}-->
+<!--      {% unless title_shown %}-->
+<!--        <h2>{{ category[1].title }}</h2><hr />-->
+<!--        {% assign title_shown = true %}-->
+<!--      {% endunless %}-->
+<!--      {% include archive-single.html %}-->
+<!--    {% endfor %}-->
+<!--  {% endfor %}-->
+<!--{% else %}-->
+<!--  {% for post in site.talks reversed %}-->
+<!--    {% include archive-single.html %}-->
+<!--  {% endfor %}-->
+<!--{% endif %}-->
 
 
 
